--- a/src/scss/registro_style.css
+++ b/src/scss/registro_style.css
@@ -5,7 +5,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-image: url("./src/images/fondo-login-china.png");
+    background-image: url("/images/fondo-login-china.png");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
