--- a/src/scss/user_profile_style.css
+++ b/src/scss/user_profile_style.css
@@ -1,9 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Noto+Serif:wght@400;700&display=swap");
 
 .contenedor-perfil {
-  display: grid;
-  grid-template-rows: repeat(2, 50%);
-  height: auto;
+  display: flex;
+  flex-direction: column;
   transition: margin-left 0.1s ease;
 }
 
@@ -12,16 +11,24 @@
   align-items: center;
   justify-content: center;
   border-bottom: 2px solid;
-  margin-bottom: 50px;
+  border-top: 2px solid;
 }
 
-.titulo-settings{
+.titulo-settings {
   text-align: center;
   font-family: "Noto Serif", serif;
-  padding-bottom: 20px;
 }
 
 .sidebar {
   /* Estilos del sidebar */
   transition: transform 0.1s ease;
+}
+
+.formulario-settings {
+  align-items: center;
+  display: flex;
+  height: 100%;
+  justify-content: center;
+  margin-top: 10px;
+  width: 100%;
 }
