--- a/src/scss/tradiciones_style.css
+++ b/src/scss/tradiciones_style.css
@@ -15,3 +15,13 @@
     margin-bottom: 5rem;
     margin-top: 5rem;
 }
+
+
+
+.card {
+    transition: 1.5s transform;
+}
+
+.card:hover {
+    transform: scale(1.05);
+}
