Se añade documentacion de componentes nuevos y se corrigen estilos

--- a/src/scss/contribuciones_style.css
+++ b/src/scss/contribuciones_style.css
@@ -103,3 +103,10 @@
   font-family: "Noto Serif", serif;
 
 }
+
+.contenido-info {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
