--- a/src/scss/contribuciones_style.css
+++ b/src/scss/contribuciones_style.css
@@ -110,3 +110,57 @@
   justify-content: center;
   align-items: center;
 }
+
+
+/*Detalle contribuciones*/
+
+.contenido-dinastias {
+    display: flex;
+    flex-direction: column;
+    margin: 1rem;
+    text-align: justify;
+    font-family: "Noto Serif", serif;
+}
+
+.dinastias-parrafo{
+    font-size: 1.5rem;
+    margin-left: 5rem;
+    margin-right: 5rem;
+    margin-bottom: 2rem;
+    margin-top: 5rem;
+}
+
+.botones-dinastias {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    font-family: "Noto Serif", serif;
+}
+
+.botones-dinastias button {
+    background-color: brown;
+    border: 0;
+    box-shadow: 0 5px 12px rgba(0, 0, 0, 0.7);
+    border-radius: 30px;
+    font-size: 1.5rem;
+    margin: 2rem;
+    padding: 2rem;
+    transition: 0.5s transform, 0.5s background-color, 0.5s color;
+    width: auto;
+    display: inline-block; /* Permite que el botón se ajuste al contenido */
+    white-space: nowrap;
+    
+}
+
+.botones-dinastias button:hover {
+    background-color: rgb(161, 65, 65);
+    transform: scale(1.10);
+    color:aliceblue;
+}
+
+.boton-modelo {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    font-family: "Noto Serif", serif;
+}
