--- a/src/scss/polvora_style.css
+++ b/src/scss/polvora_style.css
@@ -1,10 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Noto+Serif:wght@400;700&display=swap");
 
-.titulo-brujula {
+.titulo-polvora {
   top: 0;
   position: sticky;
   z-index: 2;
-  background-color: rgba(135, 135, 135, 0.5);
+  background-color: rgba(167, 162, 162, 0.5);
   width: 100%;
   font-family: "Noto Serif", serif;
   font-size: 4rem;
@@ -12,22 +12,22 @@
   margin-bottom: 1rem;
   cursor: context-menu;
   color: black; /* Color original */
-  animation: cambio-color-brujula 3s infinite alternate; /* Aplicar animación */
+  animation: cambio-color-polvora 3s infinite alternate; /* Aplicar animación */
 }
 
-@keyframes cambio-color-brujula {
+@keyframes cambio-color-polvora {
   0% {
     color: black; /* Color original */
   }
   50% {
-    color: #696969; /* Color deseado */
+    color: #5e0404; /* Color deseado */
   }
   100% {
     color: black; /* Color original */
   }
 }
 
-.info-brujula {
+.info-polvora {
   color: black;
   background-color: rgba(151, 151, 151, 0.5);
   border-radius: 10px;
@@ -47,19 +47,18 @@ body {
 
 }
 
-.page-brujula {
+.page-polvora {
   height: 100vh;
 }
 
-.page-brujula::before {
+.page-polvora::before {
   content: "";
   position: fixed;
   width: 300%;
   height: 100%;
   top: 45%;
   left: 50%;
-  background-color: #696969;
-  background-color: #696969;
+  background-color: #620205;
   border-radius: 50%;
   transform: translateX(-50%) skew(0, -10deg);
   animation: wave 7s ease-in-out infinite alternate;
