--- a/src/scss/contribuciones_style.css
+++ b/src/scss/contribuciones_style.css
@@ -1,12 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Noto+Serif:wght@400;700&display=swap");
 
-.contenedor-historia {
+.contenedor-aportes {
   display: flex;
   flex-direction: column;
   transition: margin-left 0.1s ease;
 }
 
-.historia-titulo {
+.aportes-titulo {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -15,7 +15,7 @@
   font-family: "Noto Serif", serif;
 }
 
-.contenido-historia {
+.contenido-aportes {
   align-items: center;
   display: flex;
   flex-direction: column;
@@ -114,7 +114,7 @@
 
 /*Detalle contribuciones*/
 
-.contenido-dinastias {
+.contenido-aportes {
     display: flex;
     flex-direction: column;
     margin: 1rem;
@@ -122,7 +122,7 @@
     font-family: "Noto Serif", serif;
 }
 
-.dinastias-parrafo{
+.aportes-parrafo{
     font-size: 1.5rem;
     margin-left: 5rem;
     margin-right: 5rem;
@@ -130,14 +130,14 @@
     margin-top: 5rem;
 }
 
-.botones-dinastias {
+.botones-aportes {
     display: flex;
     flex-direction: row;
     justify-content: center;
     font-family: "Noto Serif", serif;
 }
 
-.botones-dinastias button {
+.botones-aportes button {
     background-color: brown;
     border: 0;
     box-shadow: 0 5px 12px rgba(0, 0, 0, 0.7);
@@ -152,7 +152,7 @@
     
 }
 
-.botones-dinastias button:hover {
+.botones-aportes button:hover {
     background-color: rgb(161, 65, 65);
     transform: scale(1.10);
     color:aliceblue;
