--- a/src/scss/dinastias_style.css
+++ b/src/scss/dinastias_style.css
@@ -28,6 +28,7 @@
     border: 0;
     box-shadow: 0 5px 12px rgba(0, 0, 0, 0.7);
     border-radius: 30px;
+    color: rgb(255, 231, 231);
     font-size: 1.5rem;
     margin: 2rem;
     padding: 2rem;
@@ -36,9 +37,9 @@
 }
 
 .botones-dinastias button:hover {
-    background-color: rgb(161, 65, 65);
+    background-color: rgb(249, 201, 201);
     transform: scale(1.10);
-    color:aliceblue;
+    color:brown;
 }
 
 .boton-modelo {
