--- a/src/scss/minijuegos_style.css
+++ b/src/scss/minijuegos_style.css
@@ -26,11 +26,16 @@
 }
 
 .memoGame {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     border: none;
     border-radius: 20px;
     box-shadow: 0 0 7px rgba(0, 0, 0, 0.6);
     padding: 10px;
-    width: 12rem;
+    height: 15rem;
+    width: 15rem;
     transition: 0.5s ease background-color, 0.5s color, 0.5s transform;
 }
 
