--- a/src/scss/artesanias_style.css
+++ b/src/scss/artesanias_style.css
@@ -65,6 +65,8 @@
 .boton-pint {
   background-color: white;
   border-radius: 10px;
+  border: none;
+  color: black;
   font-size: 1.5rem;
   padding: 0.5rem;
   width: 10%;
@@ -73,6 +75,7 @@
 
 .boton-pint:hover {
   background-color: gray;
+  color: white;
 }
 
 .cont-cerami {
