Se implementan modificaciones de diseño, corrigiendo tamaños, estilos y funcionalidades

--- a/src/scss/boton-back_style.css
+++ b/src/scss/boton-back_style.css
@@ -29,6 +29,8 @@
     flex-direction: column;
     align-items: start;
     width: 100%;
+    bottom: 0;
+    position: sticky;
   }
   
   .back-hijo {
