--- a/src/scss/minijuegos_style.css
+++ b/src/scss/minijuegos_style.css
@@ -3,18 +3,19 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 5rem;
+    gap: 3rem;
+    height: 50%;
 }
 
 .ola {
-    height: 100vh;
+    height: 90vh;
 }
 .ola:before {
     content: "";
     position: fixed;
     width: 300%;
     height: 100%;
-    top: 45%;
+    top: 50%;
     left: 50%;
     background-color: #696969;
     background-color: #696969;
@@ -33,6 +34,7 @@
     border: none;
     border-radius: 20px;
     box-shadow: 0 0 7px rgba(0, 0, 0, 0.6);
+    font-size: 1.3rem;
     padding: 10px;
     height: 15rem;
     width: 15rem;
@@ -40,8 +42,7 @@
 }
 
 .memoGame img {
-    height: 50px;
-    margin-right: 10px;
+    height: 75px;
     width: auto;
 }
 
@@ -49,6 +50,10 @@
     background-color: rgb(166, 166, 166);
     color: white;
     transform: scale(1.2);
+}
+
+.memoGame:hover img{
+    filter: drop-shadow(0 0 10px rgb(250, 29, 29));
 }
 
 @keyframes wave {
