--- a/src/scss/nav_bar_perfil_style.css
+++ b/src/scss/nav_bar_perfil_style.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Noto+Serif:wght@400;700&display=swap");
 
 .custom-sidebar {
-  height: 100vh; /* Ajusta la altura a la altura total de la pantalla */
+  height: 100%; /* Ajusta la altura a la altura total de la pantalla */
   width: 300px; /* Ajusta el ancho del sidebar según tus necesidades */
   padding: 20px; /* Añade un espacio de relleno interno si lo deseas */
   display: flex;
@@ -27,7 +27,6 @@
 
 .custom-navbar-brand {
   font-size: 2rem;
-
 }
 
 .custom-sidebar,
@@ -36,14 +35,12 @@
   flex-grow: 1;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
-  padding-left: 0;
   transform: translateX(0);
 }
 
 .custom-navbar-nav {
-  margin-top: 10px;
+  margin-top: 30px;
 }
 
 .custom-nav-item {
@@ -65,12 +62,6 @@
   padding: 2px; /* Ajusta el espacio interno de los enlaces según tus necesidades */
 }
 
-.custom-div-logout {
-  margin-top: 5px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
 
 .nav-link .icon-custom {
   color: black;
