--- a/src/scss/next_styles.css
+++ b/src/scss/next_styles.css
@@ -1,87 +1,66 @@
 @import url("https://fonts.googleapis.com/css2?family=Noto+Serif:wght@400;700&display=swap");
 
-.container-fluid {
+.contenedor-next {
   background-image: url("../images/fondo-next.jpeg");
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: center;
-  min-height: 100vh;
-  width: 100%;
-  overflow: hidden;
+  height: 100vh;
   display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-family: "Noto Serif", serif;
+}
+
+.init-next {
+  display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  font-family: "Noto Serif", serif;
-}
-
-.contenedor-next-padre {
-  display: grid;
-  grid-template-columns: repeat(3, 33%);
-  height: 100vh;
+  gap: 4rem;
 
 }
 
-.contenedor-next-hijo-izq {
+.centro-next {
   display: flex;
   flex-direction: column;
-  text-align: center;
+  justify-content: center;
   align-items: center;
-  font-family: "Noto Serif", serif;
+  margin-top: 6rem;
 }
 
-.contenedor-next-hijo-cent {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.titulo-next {
+  color: rgb(250, 189, 189);
+  font-size: 3.5rem;
+  font-weight: bold;
   text-align: center;
+  text-shadow: 0 0 12px rgba(0, 0, 0, 1.2);
 }
 
 .parag-next {
-  background-color: rgba(255, 255, 255, 0.5);
-  font-size: 3rem;
-  font-weight: bolder;
+  background-color: rgba(157, 157, 157, 0.55);
   border-radius: 10px;
-  width: 500px;
-
+  box-shadow: 0 0 7px rgb(80, 80, 80);
+  color: rgb(255, 255, 255);
+  font-size: 3.5rem;
+  font-weight: bold;
+  padding: 0;
+  text-align: center;
+  text-shadow: 0 0 12px rgba(0, 0, 0, 1.2);
 }
-
-
-.titulo-next {
-  margin-bottom: 50%;
-  color: #5c5c5c;
-  font-size: 3rem;
-  font-weight: bolder;
-  text-shadow: 0 0 5px #ccc, 0 0 10px #ccc, 0 0 20px #ccc, 0 0 30px #ccc,
-    0 0 40px #999, 0 0 50px #999, 0 0 60px #999, 0 0 70px #999, 0 0 80px #999;
-}
-
 
 .vamos {
-  font-family: "Noto Serif", serif;
-  font-weight: 0;
-  font-size: 40px;
-  color: #fff;
-  background-color: #272727;
-  padding: 40px 70px;
-  border: solid #000000 2px;
-  box-shadow: rgba(0, 0, 0, 0.2) 0px 12px 28px 0px,
-    rgba(0, 0, 0, 0.1) 0px 2px 4px 0px,
-    rgba(255, 255, 255, 0.05) 0px 0px 0px 1px inset;
-  border-radius: 8px;
-  transition: 1000ms;
-  transform: translateY(0);
-  display: flex;
-  flex-direction: row;
-  text-align: center;
-  cursor: pointer;
+  background-color: rgb(255, 83, 83);
+  border-radius: 20px;
+  border: 0;
+  box-shadow: 0 0 7px rgb(80, 80, 80);
+  color: rgb(69, 23, 23);
+  font-size: 3.5rem;
+  margin-top: 2rem;
+  transition: 0.5s transform, 0.5s color, 0.5s background-color;
 }
 
 .vamos:hover {
-  font-size: 50px;
-  transition: 1000ms;
-  padding: 55px 90px;
-  transform: translateY(-0px);
-  background-color: #b0b0b0;
-  color: #000000;
-  border: solid 2px #000000;
+  background-color: rgb(69, 23, 23);
+  color: rgb(255, 108, 108);
+  transform: scale(1.1);
 }
