--- a/src/scss/quices_style.css
+++ b/src/scss/quices_style.css
@@ -1,109 +1,83 @@
-.text-container {
-  text-align: center;
-}
-
-.quiz-options {
-  box-shadow: 0 0 20px rgb(0, 0, 0);
-  border-radius: 50px;
-  margin: 2rem;
-  padding: 3rem;
-}
-
-.quiz-options header {
-  background-color: aquamarine;
-  border-radius: 10px;
-  box-shadow: 0 0 5px rgb(0, 0, 0);
-  margin-bottom: 50px;
-  padding: 0.5rem;
-}
-
-header p {
-  margin-top: 15px;
-}
-
-[type="radio"] {
-  border: 0;
-  height: 0.0625rem;
-  width: 0.0625rem;
-  position: absolute;
-}
-
-label {
-  display: flex;
-  align-items: center;
-  border-radius: 5px;
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.8);
-  margin-bottom: 15px;
-  padding: 6px 0;
-  position: relative;
-  width: 100%;
-  color: #000;
-}
-
-label:hover .alphabet {
-  background: #000;
-  color: #ffffff;
-}
-
-label .alphabet {
-  border-radius: 5px;
-  border: solid 1px #000;
-  padding: 0.4rem 0.5rem 0.4rem;
-  width: 2.3rem;
-  margin: 0 1.3rem 0 0.7rem;
+.tarjeta-preguntas {
   display: flex;
   justify-content: center;
-  color: #000;
+  align-items: center;
+  flex-direction: column;
 }
 
-label .radio-label {
-  width: 18px;
+.tarjeta-header {
+  background-color: rgb(233, 199, 11);
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  padding: 0.3rem;
+  text-shadow: 0 0 5px rgba(255, 255, 255, 0.6);
+  width: 65rem;
+  min-width: 20rem;
 }
 
-label .radio-label {
-  width: 22px;
+.tarjeta-header,
+.tarjeta-body {
+  display: flex;
+  justify-content: center;
+  font-size: 1.5rem;
+  align-items: center;
 }
 
-.input-radio:checked + label {
-  background: rgb(158, 248, 221);
-  text-transform: uppercase;
-  -webkit-text-stroke: 0.6px #fff;
+.tarjeta-body {
+  border-left: 1px solid;
+  border-right: 1px solid;
+  border-bottom: 1px solid;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+  flex-direction: column;
+  gap: 2rem;
+  padding: 0.95rem;
+  width: 65rem;
+  min-width: 20rem;
 }
 
-.input-radio:checked + label .alphabet {
-  background: #000000;
-  color: #ffffff;
+.radio-container {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
 }
 
-.input-radio:checked + label {
-  text-transform: uppercase;
-  -webkit-text-stroke: 0.6px #000000;
+.radio.selected {
+  background-color: #97eea4;
+  border: none;
+  border-radius: 10px;
+  padding: 0.25rem;
 }
 
-.input-radio:checked + label .alphabet {
-  background: #ffffff;
-  color: #000000;
+.radio {
+  transition: 0.5s ease-in-out background-color, 0.5s ease-in-out transform;
 }
 
-#btn {
-  border: 1px solid #000;
-  border-radius: 50px;
-  background: rgb(74, 167, 249);
-  color: #000;
-  display: block;
-  font-size: 1.1rem;
-  font-weight: 600;
-  width: 57%;
-  margin: 0 auto;
-  outline: none;
-  padding: 11px 0;
-  text-align: center;
-  cursor: pointer;
-  -webkit-tap-highlight-color: transparent;
+.radio:hover {
+  background-color: #bbbbbb;
+  border: none;
+  border-radius: 10px;
+  padding: 0.25rem;
 }
 
-#btn:hover {
-  background: rgba(255, 255, 255, 0.671);
-  color: rgba(0, 0, 0, 0.749);
-  border: 1px solid #000;
+.radio.selected:hover {
+  background-color: #97eea4;
+  border: none;
+  border-radius: 10px;
+  padding: 0.25rem;
+}
+
+.btn-verificar {
+    background-color: rgb(134, 134, 134);
+    border-radius: 20px;
+    color: #ffffff;
+    font-size: 1.4rem;
+    padding: 0.5rem;
+    transition: 0.5s ease-in-out background-color, 0.5s ease-in-out color, 0.5s ease-in-out transform;
+}
+
+.btn-verificar:hover {
+    background-color: goldenrod;
+    color: #000;
+    transform: scale(1.05);
 }
